# glymur

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST  MANIFEST.in  README  README.md  TODO  appveyor.yml  azure-pipelines.yml  conftest.py  pyproject.toml  readthedocs-pip-requirements.txt  release.txt  setup.cfg  setup.py  travis-install-openjpeg.sh  travis-requirements.txt
.circleci/: config.yml
ci/: cforge-travis-312.yaml  doc.yml  install.ps1  install_openjpeg.sh  install_openjpeg15.sh  requirements-2.7_latest.txt  requirements-2.7_oldest.txt  requirements-2.7_opj15.txt  requirements-3.4_latest.txt  requirements-3.5_no_lxml.txt  requirements_2.7_earliest.txt  requirements_2.7_latest.txt  requirements_2.7_opj15.txt  requirements_27_earliest.txt  requirements_3.3_no_extras.txt  requirements_3.4_latest.txt  requirements_3.5_latest.txt  requirements_3.5_no_opj.txt  requirements_3.5_opj15.txt  requirements_3.6_latest.txt  requirements_3.6_no_opj.txt  requirements_3.6_opj212.txt  requirements_3.6_opj220.txt  requirements_3.7_latest.txt  requirements_3.8_latest.txt  requirements_35_opj15.txt  requirements_36_latest.txt  run_pip.sh  run_script.sh  setup_env.sh  travis-310-no-opj.yaml  travis-310.yaml  travis-311-no-gdal.yaml  travis-311-no-opj.yaml  travis-311.yaml  travis-312.yaml  travis-313.yaml  travis-36-no-opj.yaml  travis-36.yaml  travis-37-no-gdal.yaml  (+5 more)
docs/: Makefile  make.bat  requirements.txt
docs/latex/: chapter1.tex  chapter2.tex  issue448.tex  preamble.tex
docs/source/: api.rst  changelog.rst  conf.py  detailed_installation.rst  how_do_i.rst  index.rst  introduction.rst  roadmap.rst
glymur/: __init__.py  _core_converter.py  _iccprofile.py  _tiff.py  _uuid_io.py  codestream.py  command_line.py  config.py  core.py  jp2box.py  jp2dump.py  jp2k.py  jp2kr.py  jpeg.py  options.py  tiff.py  version.py
glymur/_uuid_io/: Exif.py  XMP.py  __init__.py  generic.py
glymur/data/: 12-v6.4.jpx  __init__.py  albers27.tif  goodstuff.j2k  heliov.jpx  nemo.jp2
glymur/lib/: __init__.py  c.py  config.py  openjp2.py  openjpeg.py  tiff.py
glymur/test/: __init__.py  fixtures.py  test_callbacks.py  test_codestream.py  test_codestream_warnings.py  test_config.py  test_conformance.py  test_format_corpus.py  test_glymur_warnings.py  test_icc.py  test_jp2box.py  test_jp2box_jpx.py  test_jp2box_uuid.py  test_jp2box_xml.py  test_jp2k.py  test_jp2k_15.py  test_opj_suite.py  test_opj_suite_2p1.py  test_opj_suite_dump.py  test_opj_suite_neg.py  test_opj_suite_warn.py  test_opj_suite_write.py  test_printing.py  test_warnings.py  test_xmp.py
tests/: __init__.py  fixtures.py  test_append.py  test_callbacks.py  test_cinema.py  test_codestream.py  test_colour_specification_box.py  test_command_line.py  test_commandline.py  test_commandline_jp2dump.py  test_commandline_jpeg2jp2.py  test_commandline_tiff2jp2.py  test_config.py  test_dask.py  test_docs.py  test_geo.py  test_icc.py  test_jp2box.py  test_jp2box_hirise_uuid.py  test_jp2box_jpx.py  test_jp2box_uuid.py  test_jp2box_xml.py  test_jp2k.py  test_jp2k_1.py  test_jp2k_2.py  test_jp2k_write.py  test_jp2k_writes.py  test_jp2kr.py  test_jpeg2jp2.py  test_libtiff.py  test_openjp2.py  test_openjpeg.py  test_opj_suite.py  test_opj_tile_write.py  test_opj_tile_write3.py  test_options.py  test_printing.py  test_read_area.py  test_repr.py  test_set_decoded_components.py  (+7 more)
tests/data/: albers27-8.tif  appended_xml_box.txt  basn6a08.tif  default_compression_parameters_type.txt  default_progression_order_changes_type.txt  edf_c2_1178956.jp2  edf_c2_1674177.jp2  gdal_fuzzer_check_number_of_tiles.jp2  geotiff_uuid.txt  geotiff_uuid_proj6.txt  geotiff_uuid_without_gdal.txt  goodstuff_codestream_header.txt  goodstuff_with_full_header.txt  issue186_progression_order.txt  issue396.jp2  issue438.jp2  issue572.tif  issue626.j2k  issue982.j2k  nemo.txt  nemo_xmp.txt  (+13 more)
(+55 files in other folders)
