[metadata]
name = Glymur
version = 0.13.6
author = 'John Evans'
author_email = "John Evans" <jevans667cc@proton.me>
license = 'MIT'
long_description_content_type = text/markdown
long_description = 
    **glymur** contains a Python interface to the OpenJPEG library which
    allows one to read and write JPEG 2000 files.

url = https://github.com/quintusdias/glymur
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    lxml
    packaging
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
	jp2dump = glymur.command_line:main
        tiff2jp2 = glymur.command_line:tiff2jp2

[options.package_data]
glymur = 
    data/*.jp2
    data/*.jpx
    data/*.j2k

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
test =
    pytest
    pillow
